correct heroku picture alignement?

--- a/client/src/css/Home.css
+++ b/client/src/css/Home.css
@@ -4,6 +4,8 @@ h2 {
 
 #top-pic {
   position: relative;
+  margin-left: auto;
+  margin-right: auto;
   display: block;
   overflow: hidden;
   width: 100%;
